2018-06-29  Petasis George  <petasis@iit.demokritos.gr>
	* tcl-conf: Added a quick check to locate tclConfig.sh & tkConfig.sh,
	if they have been placed in non-standard locations withing the Tcl
	installtion directory. Bug #18
	(https://github.com/petasis/tkdnd/issues/18).

2018-06-25  Petasis George  <petasis@iit.demokritos.gr>
	* Makefile.in: Updated to latest Makefile.in from Tcl sample extension.

	* tcl-conf: Convert path returned by [info library] into an absolute
	path.

2018-06-25  Petasis George  <petasis@iit.demokritos.gr>
	* configure: Regenerated with "autoconf -i".

	* tclconfig/tcl.m4: Updated to the latest TEA version.

	* README.md: Updated the readme file with installtion instructions for
	Windows.

2018-05-26  Petasis George  <petasis@iit.demokritos.gr>
	* configure: Regenerated with "autoconf -i".

	* tclconfig/tcl.m4: Updated to the latest version.

	* configure.ac: Removed option "-fobjc-gc" from OS X build.

	* win/OleDND.h: Added the option to skip some events during DragOver().
	To activate it, DND_DRAGOVER_SKIP_EVENTS must be defined.

	* library/tkdnd_windows.tcl: Changed "update" to "update idletasks".
	Bug reported by flopp Github user.
	Bug #17: https://github.com/petasis/tkdnd/issues/17.

	* win/TkDND_OleDND.cpp: Fixed a bug in TKDND_REPORT_ERROR(x), where the
	errmsg pointer could go out of scope. Bug and patch provided by ralfixx
	Github user. Bug #18: https://github.com/petasis/tkdnd/issues/18.

        * Makefile.in: Added a fix for .cpp files, compiled under windows with
	configure/make. Bug and patch provided by ralfixx
	Github user. Bug #18: https://github.com/petasis/tkdnd/issues/18.

2018-02-13  Petasis George  <petasis@iit.demokritos.gr>
	configure.ac: "${TEA_PLATFORM}" = "windows" fails under MINGW64.
	Added a check for TEA_PLATFORM to include also MINGW64
	(windows|*MINGW64_*).

	* library/tkdnd_compat.tcl: Fixed a bug in compat::bindsource2,
	suggested by segalion: https://github.com/petasis/tkdnd/issues/13